@@ -13,7 +13,8 @@ Core and Builtins
 Library
 -------
 
-- Issue #13719: Make the distutils upload command aware of bdist_msi products.
+- Issue #13719: Make the distutils and packaging upload commands aware of
+  bdist_msi products.
 
 - Issue #14007: Accept incomplete TreeBuilder objects (missing start, end,
   data or close method) for the Python implementation as well.
